<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/callButton"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="459dp"
        android:background="#F02416"
        android:text="@string/begin_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="240dp"
        android:layout_marginTop="34dp"
        android:text="@string/call_for_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/callButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="237dp"
        android:layout_marginTop="-2dp"
        android:background="#48CE32"
        android:text="@string/caller_is_safe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="348dp"
        android:layout_height="186dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="270dp"
        android:scaleY="12"
        android:startColor="#ff9d9e9d" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu" />

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="130dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/riskText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/risk_level"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/riskLevelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/not_currently_in_call"
            android:textSize="9pt" />
    </LinearLayout>

    <TextView
        android:id="@+id/transcribedText"
        android:layout_width="349dp"
        android:layout_height="174dp"
        android:layout_alignStart="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:layout_marginTop="161dp"
        android:textSize="8pt" />


</RelativeLayout>